# blue2mesh

./: Cargo.toml  README.md
examples/: complete_workflow.rs  scheme_to_stl_demo.rs
outputs/demo/: simple_channel.json
outputs/demo/3d/: bifurcation.stl  simple_channel.stl  single_channel.stl  trifurcation.stl
outputs/demo/json/: bifurcation.json  serpentine.json  trifurcation.json
src/: channels.rs  error.rs  export.rs  extrusion.rs  import.rs  junctions.rs  lib.rs  mesh.rs  quality.rs
