[package]
name = "blue2mesh"
version = "0.1.0"
edition = "2021"
description = "Experimental 3D mesh generation for millifluidic devices from 2D scheme designs"
license = "MIT"
repository = "https://github.com/ryancinsight/blue2mesh"
keywords = ["mesh-generation", "millifluidics", "3d-modeling", "cfd", "experimental"]
categories = ["science", "simulation", "graphics"]
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]

[workspace]
members = ["."]
resolver = "2"

[dependencies]
# Core dependencies
thiserror = "1.0.56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.34.1"
ndarray = "0.15"
rayon = { version = "1.7", optional = true }

# Mesh and geometry dependencies
csgrs = { git = "https://github.com/timschmidt/csgrs.git", features = [
    "f64",           # Use f64 precision
    "stl-io",        # STL file format support
    "obj-io",        # OBJ file format support
    "ply-io",        # PLY file format support
    "delaunay",      # Delaunay triangulation (required, mutually exclusive with earcut)
] }
cfd-schematics = { path = "../CFDrs/crates/cfd-schematics" }

# Additional mesh processing
meshopt = { version = "0.2", optional = true }  # Mesh optimization
delaunator = "1.0"  # Delaunay triangulation
spade = "2.4"  # Spatial data structures
log = "0.4"  # Logging
env_logger = "0.10"  # Environment-based logging
chrono = { version = "0.4", features = ["serde"] }  # Date/time handling

# Visualization
plotters = { version = "0.3.5", optional = true }

# File I/O
bytemuck = "1.14"  # Safe transmutation for binary formats

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
tempfile = "3.8"

[features]
default = ["mesh-generation", "quality-control", "cfd-export"]

# Core mesh generation capabilities
mesh-generation = []
quality-control = ["meshopt"]
adaptive-refinement = []

# Export format support
cfd-export = []
vtk-export = []
openfoam-export = []
cgns-export = []
stl-export = ["csgrs/stl-io"]

# Performance features
parallel = ["rayon", "ndarray/rayon"]
simd = []  # SIMD features to be configured based on nalgebra version

# Visualization features
visualization = ["plotters"]

# Manufacturing export (experimental)
manufacturing = ["stl-export", "csgrs/stl-io"]

# Benchmarks will be added later
# [[bench]]
# name = "mesh_generation_benchmarks"
# harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow specific lints for mesh processing
too_many_arguments = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
float_cmp = "allow"  # Common in geometric computations
